# xaubot

./: .gitattributes  .gitignore  AB_TESTING_GUIDE.md  AB_TESTING_REPORT.md  BACKTESTING_DEPLOYMENT_INSTRUCTIONS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  DEPLOY_TO_MT5.bat  DEPLOY_TO_TESTER.bat  DEPLOY_TO_TESTER.ps1  DLL_BUILD_INSTRUCTIONS.md  FINAL_ANALYSIS_AND_SOLUTION.md  LIGHTNING_AI_TRAINING_INSTRUCTIONS.md  LIVE_TRADING_CONFIG.md  M1_ARCHITECTURE.md  MODEL_PERFORMANCE_ANALYSIS.md  MQL5_ARTICLES_INSIGHTS.md  MT5_BACKTEST_ERROR_FIX_SUMMARY.md  MT5_DEPLOYMENT.md  MT5_ONNX_INTEGRATION.md  MT5_TEST_CHECKLIST.md  MT5_VALIDATION_PLAN.md  NEXT_STEPS_ACTION_REQUIRED.md  ONNX_BEST_PRACTICES_APPLIED.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md  PYTHON_BACKTESTING_SUMMARY.md  QUICKFIX_MT5_ONNX.md  QUICKSTART_DLL.md  README_MT5_IMPLEMENTATION.md  README_START_HERE.md  SETUP_DLL.bat  STRATEGY_TESTER_DEPLOYMENT.md  TESTING_CHECKLIST.md  TODO_MT5.md  TRAINING_RESULTS.md  UPDATE_FROM_GITHUB.bat  XAUBOT_DEVELOPMENT_PLAN.md  build_lightgbm_dll.ps1  export_fixed_onnx.py  export_lightgbm_txt.py  (+19 more)
.claude/: settings.local.json
.ipynb_checkpoints/: DEPLOYMENT_CHECKLIST-checkpoint.md  IMPLEMENTATION_SUMMARY-checkpoint.md  README-checkpoint.md
MT5_XAUBOT/: INSTALLATION_CHECKLIST.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.txt  README.md
config/: features_order.json  model_meta.json  paths.yaml
docs/: DEPLOYMENT_GUIDE.md  ENSEMBLE_EA_ARCHITECTURE.md  MT5_IMPLEMENTATION_RESEARCH_REPORT.md  OPTIMIZATION_PARAMETERS.md  TRANSFORMER_EXPORT_GUIDE.md
lightgbm_mt5_dll/: CMakeLists.txt  lightgbm_wrapper.cpp
mt5_expert_advisor/: XAUUSD_NeuralBot_DLL.ex5  XAUUSD_NeuralBot_DLL.mq5  XAUUSD_NeuralBot_Ensemble.mq5  XAUUSD_NeuralBot_Hybrid.mq5  XAUUSD_NeuralBot_M1.mq5  XAUUSD_NeuralBot_Single.mq5
python_backtesting/: .gitignore  README.md  backtest_engine.py  debug_features.py  debug_model.py  debug_onnx_outputs.py  diagnose_signals.py  prepare_data.py  prepare_real_data.py  run_backtest.py
python_dll/: README.md  compile_dll.py  lightgbm_predictor.py  test_local.py
python_monitoring/: README.md  dashboard.py  requirements.txt  (+1 more)
(+141 files in other folders)
